Register customer feature
